Fixes history spacing

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -7,6 +7,10 @@ body, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+b, span {
+  display: inline-block;
+}
+
 .container {
   max-width: 960px;
   margin-left: auto;
